--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
   "httpx>=0.27",
   "streamlit>=1.31",
   "ruff>=0.5",
+  "openai>=1.106.1",
+  "python-dotenv>=1.1.1",
 ]
 
 [tool.uv]
